<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_data"
        android:title="@string/action_import_database"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_from_sd"
        android:title="@string/action_import_from_sd"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>